# alex

./: COPYING  Cargo.toml  LICENSE-APACHE  README.md  README.tpl
.github/workflows/: check.yml  readme.yml  security.yml
examples/: build-wasm32.bat  build-wasm32.sh  many.html  many.rs  server.py  simple.html  simple.rs
examples/web/: index.html  server.py  simple.html
license/: APACHE  MIT
src/: access.rs  and.rs  archetype.rs  async.rs  bundle.rs  component.rs  empty.rs  entity.rs  filter.rs  generation.rs  lib.rs  or.rs  read.rs  schedule.rs  tuples.rs  util.rs  view.rs  world.rs  write.rs
src/archetype/: archetype.rs  iterator.rs  mod.rs  storage.rs
src/query/: access.rs  and.rs  iter.rs  mod.rs  read.rs  view.rs  write.rs
src/util/: async.rs  capacity_overflow.rs  display.rs  gen.rs  hash.rs  iterator.rs  mod.rs  mutex.rs  sync.rs  type_map.rs  unreachable_unchecked.rs
