[package]
name = "alex"
version = "0.1.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
description = "Lite, data-drivem ECS"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/alex"
keywords = ["ecs", "wasm"]
repository = "https://github.com/zakarumych/alex"
readme = "README.md"

[features]
parallel = ["parking_lot"]
faster = []

[dependencies]
bumpalo = { version = "3.2", features = ["collections"] }
log = "0.4"
smallvec = "1.0"
lazy_static = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = { version = "1.3", optional = true }
parking_lot = { version = "0.10", optional = true }
raw-cpuid = "8.1"

[dev-dependencies]
cfg-if = "0.1"
instant = { version = "0.1", features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
env_logger = "0.7"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = { version = "0.2.62", features = [] }
console_log = "0.2"

