[package]
name = "alex"
version = "0.1.0"
edition = "2018"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/alex/0.1.0"
homepage = "https://github.com/Zakarum <zakarumych@ya.ru>/alex"
repository = "https://github.com/Zakarum <zakarumych@ya.ru>/alex"


[features]
std = ["parking_lot"]

[dependencies.spin]
version = "0.7"

[dependencies.parking_lot]
version = "0.11"
optional = true

[dependencies.hashbrown]
version = "0.9"
default-features = false

[dependencies.ahash]
version = "0.5"

[dependencies.pin-project-lite]
version = "0.2"
